# BioMedicalNews

./: .gitignore  CLAUDE.md  README.md  config.example.toml  pyproject.toml
bmlib_patch/: README.md  bmlib_initial.patch
bmnews/: __init__.py  cli.py  config.py  pipeline.py
bmnews/db/: __init__.py  engine.py  migrations.py  models.py  operations.py  repository.py  schema.py
bmnews/digest/: __init__.py  renderer.py  sender.py
bmnews/fetchers/: __init__.py  base.py  europepmc.py  medrxiv.py
bmnews/gui/: app.py  helpers.py  launcher.py
bmnews/gui/routes/: papers.py  pipeline.py  settings.py
bmnews/gui/static/css/: app.css
bmnews/gui/static/js/: app.js
bmnews/gui/templates/: base.html
bmnews/gui/templates/fragments/: fulltext_content.html  paper_card.html  paper_list.html  papers_view.html  reading_pane.html  settings.html  status_bar.html  template_editor.html
bmnews/scoring/: __init__.py  quality.py  relevance.py  relevance_agent.py  scorer.py
docs/dev/: architecture.md  bmlib-integration.md  codebase.md  contributing.md  database.md  index.md  testing.md
docs/plans/: 2026-02-13-run-days-show-cached-design.md  2026-02-14-desktop-gui-design.md  2026-02-14-desktop-gui-plan.md  2026-02-15-fulltext-retrieval-design.md  2026-02-15-fulltext-retrieval-plan.md
docs/user/: configuration.md  index.md  installation.md  quickstart.md  templates.md  troubleshooting.md  usage.md
templates/: digest_email.html  digest_text.txt  relevance_scoring.txt  relevance_system.txt
tests/: conftest.py  test_config.py  test_db.py  test_digest.py  test_fetchers.py  test_fulltext_integration.py  test_gui_app.py  test_gui_helpers.py  test_pipeline.py  test_scoring.py
