[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bmnews"
version = "0.1.0"
description = "Biomedical news reader — fetches, scores, and delivers biomedical preprints matching your research interests"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.11"
authors = [
    { name = "Horst Herb", email = "my.list.subscriptions@gmail.com" },
]
keywords = ["biomedical", "preprints", "medrxiv", "europepmc", "research"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "sqlalchemy>=2.0",
    "httpx>=0.25",
    "click>=8.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
postgresql = ["psycopg2-binary>=2.9", "pgvector>=0.3"]
semantic = ["numpy>=1.24", "sentence-transformers>=2.2"]
numpy = ["numpy>=1.24"]
dev = ["pytest>=7.0", "pytest-cov", "ruff"]
all = ["bmnews[postgresql,semantic,dev]"]

[project.scripts]
bmnews = "bmnews.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
